[gd_scene load_steps=3 format=3 uid="uid://td0ocxriw0a8"]

[ext_resource type="Script" uid="uid://cor4368eeqorf" path="res://scenes/diddle_mode_selection.gd" id="1_7cbvq"]
[ext_resource type="Theme" uid="uid://bdhp2uvk0sxwp" path="res://themes/war_theme.tres" id="1_y60mq"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7cbvq")

[node name="Panel_Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_y60mq")

[node name="Button_Draft" type="Button" parent="Panel_Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -96.0
offset_right = 128.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "DRAFT"

[node name="Button_Constructed" type="Button" parent="Panel_Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 32.0
offset_right = 128.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "CONSTRUCTED"

[node name="Label" type="Label" parent="Panel_Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -136.0
offset_top = 36.0
offset_right = 136.0
offset_bottom = 75.0
grow_horizontal = 2
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 36
text = "MODE SELECTION"

[node name="Button_Back" type="Button" parent="Panel_Background"]
offset_left = 16.0
offset_top = 16.0
offset_right = 144.0
offset_bottom = 47.0
focus_mode = 0
text = "BACK"

[connection signal="pressed" from="Panel_Background/Button_Draft" to="." method="_on_button_draft_pressed"]
[connection signal="pressed" from="Panel_Background/Button_Constructed" to="." method="_on_button_constructed_pressed"]
[connection signal="pressed" from="Panel_Background/Button_Back" to="." method="_on_button_back_pressed"]
